<resources>
    <string name="app_name">AsilApp Container</string>
    <string name="welcome_message">Welcome to AsilApp Container!</string>
    <string name="welcome_message_explain">You can scan the QR code to access the container, via AsilApp</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="interrupt_session">Interrupted Session</string>

    <string name="no_connection">Please connect to a network...</string>
    <string name="no_connection_title">No Internet Connection</string>
    <string name="no_connection_explain">Please check your internet connection and try again</string>
    <string name="no_connection_button">Retry</string>
    <string name="no_connection_button_cancel">Cancel</string>

    <string name="btn_home">Home</string>
    <string name="btn_my_account">Account</string>
    <string name="btn_add">Measure</string>
    <string name="welcome">Welcome</string>

    <string name="my_measures">My Measures</string>
    <string name="how_to_measure">How to Measure</string>
    <string name="how_to_measure_explain">Here you will find a short tutorial on how to take a measurement</string>

    <string name="my_account"> My Account </string>

    <string name="measure">Measure</string>
    <string name="measure_explain">Here you can take a measurement</string>
    <string name="select_measure">Select what you want to measure</string>

    <string name="temperature">Temperature</string>
    <string name="Heartbeat">Heartbeat</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Glycemia</string>

    <!-- Heart Rate -->
    <string name="heartbeat_rate">Heartbeat Rate</string>
    <string name="heartbeat_rate_explain">Here you can measure your heart rate</string>
    <string name="click_to_measure">Click to measure</string>
    <string name="measure_heartbeat">Measure Heartbeat</string>
    <string name="loading">Wait Please...</string>
    <string name="press_back_again"> Press back again to exit </string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_value_explain">Your heart rate is </string>
    <string name="bradycardia">Your heart rate is too low, you may have Bradycardia. Consult a doctor.</string>
    <string name="tachycardia">Your heart rate is too fast, you may have Tachycardia. Consult a doctor.</string>
    <string name="normal_heart_rate">Your heart rate is normal</string>

    <!-- Temperature -->
    <string name="temperature_title">Detect your temperature</string>
    <string name="temperature_explain">Here you can measure your temperature</string>
    <string name="measure_temperature">Measure Temperature</string>
    <string name="temperature_value_explain">Your temperature is </string>
    <string name="high_temperature">You have a fever, consult a doctor.</string>
    <string name="normal_temperature">Your temperature is normal</string>
    <string name="low_temperature">Your temperature is too low,you may be at risk of hypothermia, consult a doctor.</string>
    <!-- Blood Pressure -->
    <string name="blood_pressure_title">Detect your blood pressure</string>
    <string name="blood_pressure_explain">Here you can measure your blood pressure</string>
    <string name="measure_blood_pressure">Measure Blood Pressure</string>
    <string name="blood_pressure_value_explain">Your blood pressure is </string>
    <string name="high_blood_pressure_slight">Your blood pressure is high, you may have slight hypertension. Consult a doctor.</string>
    <string name="high_blood_pressure_moderate">Your blood pressure is high, you may have moderate hypertension. Consult a doctor.</string>
    <string name="high_blood_pressure_grave">Your blood pressure is high, you may have severe hypertension. Consult a doctor.</string>
    <string name="normal_blood_pressure">Your blood pressure is normal</string>
    <string name="low_blood_pressure">Your blood pressure is too low, you may have hypotension. Consult a doctor.</string>
    <!-- Glycemia -->
    <string name="glycemia_title">Detect your glycemia</string>
    <string name="glycemia_explain">Here you can measure your glycemia</string>
    <string name="measure_glycemia">Measure Glycemia</string>
    <string name="glycemia_value_explain">Your glycemia is </string>
    <string name="high_glycemia">Your glycemia is high, you may have Diabetes mellitus. Consult a doctor.</string>
    <string name="normal_glycemia">Your glycemia is normal</string>
    <string name="low_glycemia">Your glycemia is too low, you may have hypoglycemia. Consult a doctor.</string>
    <string name="pre_diabetes">Your glycemia is high, you may have pre-diabetes. Consult a doctor.</string>


    <string name="records_value">Records Value</string>
    <string name="close">Close</string>
    <string name="value_added_explain">Now you can see on Asil App the value</string>
    <string name="question_value">Do you want records the value?</string>

    <plurals name="age">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <string name="logout_successful">Logout successful</string>
</resources>