<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_relative_layout"
    app:circularflow_radiusInDP="30dp"
    android:padding="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">

    <TextView
        android:id="@+id/title_app"
        style="@style/CardViewTitleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />


    <TextView
        android:id="@+id/welcome"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_app"
        android:layout_centerInParent="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/welcome_message_explain" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/welcome"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/generaQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qrCode"
        android:layout_centerInParent="true"
        android:text="@string/generate_qr"></Button>


</RelativeLayout>