<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_relative_layout"
    app:circularflow_radiusInDP="30dp"
    android:padding="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    >

    <TextView
        android:id="@+id/title_app"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/welcome"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_app"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/welcome_explain"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message_explain"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        />
    <Button
        style="@style/RegularText"
        android:id="@+id/sign_in"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_explain"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        android:textColor="@color/seed">
    </Button>


</RelativeLayout>