<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:id="@+id/measure_explain_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/measure_text"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:text="@string/temperature_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/measure_explain_text"
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/measure_text"
            android:layout_marginLeft="10dp"
            android:text="@string/temperature_explain" />

        <TextView
            android:id="@+id/measure_explain_text_2"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/measure_explain_text"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/click_to_measure" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/measure_explain_text_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/temperature" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/measure_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/measure_explain_layout"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="20dp"
            android:id="@+id/measure_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/measure_result_layout"
                android:layout_width="230dp"
                android:layout_height="200dp"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/thermo_image"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thermo_image"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/loading_text"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:layout_below="@+id/progressBar"/>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</RelativeLayout>