<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:id="@+id/measure_explain_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/measure_text"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/heartbeat_rate"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/measure_explain_text"
            style="@style/CardViewSubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/measure_text"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/heartbeat_rate_explain" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/measure_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/measure_explain_layout"
        android:layout_centerInParent="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="20dp"
            android:id="@+id/measure_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/measure_result_layout"
                android:layout_width="230dp"
                android:layout_height="220dp"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/heart_image"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/coraz_n"/>

                <TextView
                    android:id="@+id/heart_rate"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:textColor="@color/beige"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heart_image"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/loading_text"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/loading"
                    android:layout_below="@+id/progressBar"
                    android:visibility="gone"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/measure_card_view"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/measure_heartbeat" />

    </RelativeLayout>
</RelativeLayout>